See http://netpbm.sourceforge.net/history.html for a general history of
Netpbm.

CHANGE HISTORY 
--------------

not yet  BJH  Release 11.02.00

              pcdovtoppm: remove dependency on obsolete 'tempfile' program.

              build: change the way you add the separately distributed
              'hpcdtoppm' code to the build.

22.12.31 BJH  Release 11.01.00

              pamcat: Add -listfile .

              pamtojpeg2k: add -size option.  Doesn't precisely work (and
              -compression has never worked precisely either); should be
              fixed some day.

              ppmtompeg: Fix crash with resize option because of invalid
              memory free.

              fitstopnm: fix invalid memory reference (nonterminated ASCIIZ
              string).

              packaging: Fix library minor number to 100 + Netpbm minor number
              so it is higher than previous ones in library major 100.
              I.e. libnetpbm.so.100.101 instead of libnetpbm.so.100.1.
              Introduced in Netpbm 11.00.00.

22.09.28 BJH  Release 11.00.00

              (No significance to new major number; just ran out of 2-digit
              minor numbers).

              Add pamcat.

              pamtable: add -tuple.

              pamtable: add -hex.

              pbmtextps: improve error messages.

              pnmtofits: fix arbitrary behavior when FITS input lacks
              required fields in header.  Always broken.  Pnmtofits'
              predecessor was in primordial Netpbm (1989).

              ppmtoicr: Fix bug: all options cause bogus command line parsing
              errors.  Always broken.  Ppmtoicr was new in 1991.

              ppmtoicr: Fix arithmetic overflows.

              ppmtoicr: make -rle option issue an error message saying it no
              longer exists (it did, sort of, before 2015).

              ppmforge: Fix arbitrary output with really large -power.
              